; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/platforms/cell/spufs/extr_file.c_spufs_event_status_get.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/platforms/cell/spufs/extr_file.c_spufs_event_status_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.spu_context = type { %struct.spu_state }
%struct.spu_state = type { i64*, i64* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.spu_context*)* @spufs_event_status_get to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @spufs_event_status_get(%struct.spu_context* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.spu_context*, align 8
  %4 = alloca %struct.spu_state*, align 8
  %5 = alloca i64, align 8
  store %struct.spu_context* %0, %struct.spu_context** %3, align 8
  %6 = load %struct.spu_context*, %struct.spu_context** %3, align 8
  %7 = getelementptr inbounds %struct.spu_context, %struct.spu_context* %6, i32 0, i32 0
  store %struct.spu_state* %7, %struct.spu_state** %4, align 8
  %8 = load %struct.spu_state*, %struct.spu_state** %4, align 8
  %9 = getelementptr inbounds %struct.spu_state, %struct.spu_state* %8, i32 0, i32 1
  %10 = load i64*, i64** %9, align 8
  %11 = getelementptr inbounds i64, i64* %10, i64 0
  %12 = load i64, i64* %11, align 8
  store i64 %12, i64* %5, align 8
  %13 = load i64, i64* %5, align 8
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %21

15:                                               ; preds = %1
  %16 = load %struct.spu_state*, %struct.spu_state** %4, align 8
  %17 = getelementptr inbounds %struct.spu_state, %struct.spu_state* %16, i32 0, i32 0
  %18 = load i64*, i64** %17, align 8
  %19 = getelementptr inbounds i64, i64* %18, i64 0
  %20 = load i64, i64* %19, align 8
  store i64 %20, i64* %2, align 8
  br label %22

21:                                               ; preds = %1
  store i64 0, i64* %2, align 8
  br label %22

22:                                               ; preds = %21, %15
  %23 = load i64, i64* %2, align 8
  ret i64 %23
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
